/*
 *
 */

2009-04-01 04:00 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * demos/dbExplorer/dbExplorer.prg
    * updated demo

  * GNUmakefile
  * makefile.gcc
  * makefile.vc
  * wxharbour.bkl
    * updated makefiles, changed proj-id from "samples" to "demos"

  * include/wxharbour.ch
  + include/wxh/auibook.ch
  + include/wxh/bookctrl.ch
  + include/wxh/notebook.ch
  * src/hrbcompat/errorsys/wxherrorsys.prg
  * tests/text/text.prg
    * added include files: "auibook.ch", "notebook.ch"
    ! Fixed command BEGIN *BOOK, mising ','
    * renamed command ADD BOOK PAGE ... to ADD BOOKPAGE

  * src/common/wxhfuncs.prg
    ! Fixed checking for a empty ::ParentList on adding Parent control to array

  * tests/GNUmakefile
    * updated makefile

  * tests/helloworld/helloworld.prg
    * updated sample

  - tests/samples.bkl
    * removed unneeded bakefile

2009-04-01 01:27 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * build_bkls.sh
    ! Fixed script

2009-04-01 01:21 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
A  +   demos
  - test
  - test/dbExplorer
  - test/dbExplorer/dbExplorer.prg
  - test/dbExplorer/GNUmakefile
  - test/dbExplorer/makefile.gcc
  - test/dbExplorer/makefile.vc
  - test/test1
  - test/test1/GNUmakefile
  - test/test1/makefile.gcc
  - test/test1/makefile.vc
  - test/test1/test1.prg
    * pass 3

2009-04-01 01:19 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
A  +   tests
  - samples
  - samples/arrbrowser
  - samples/arrbrowser/arrbrowser.bkl
  - samples/arrbrowser/arrbrowser.prg
  - samples/arrbrowser/GNUmakefile
  - samples/arrbrowser/makefile.gcc
  - samples/arrbrowser/makefile.vc
  - samples/dbbrowser
  - samples/dbbrowser/dbbrowser.bkl
  - samples/dbbrowser/dbbrowser.prg
  - samples/dbbrowser/GNUmakefile
  - samples/dbbrowser/main.dbf
  - samples/dbbrowser/makefile.gcc
  - samples/dbbrowser/makefile.vc
  - samples/GNUmakefile
  - samples/grid
  - samples/grid/GNUmakefile
  - samples/grid/grid.prg